# cardano-ckb-isomorphic

./: .gitattributes  .gitignore  README.md
.github/workflows/: verifier-difftest.yml
cardano/binding/: RESULTS.txt  binding_tests.ak  cardano_net.py  cardano_status.py  deploy-bound-cell.mjs  deploy_seal.py  leap_to_cardano_ours.py  leap_to_ckb_ours.py  mint_seal_ours.py  plutus.json  spend_seal.py  transfer_seal_ours.py  transition-bound-cell.mjs  unbind_seal.py  unbind_seal_ours.py
dapp/: TESTING.md  index.html  jobreg.mjs  jobreg.test.mjs  package-lock.json  package.json  server.mjs  vite.config.js
dapp/src/: App.jsx  api.js  cardano.js  leap.js  main.jsx  mint.js  queue.js  styles.css  xada.js
deploy/: .env.example  DEPLOY.md  PILOT_DEPLOY.md  chiral-dapp.service  chiral-warmprover-forward.service  chiral-warmprover.service  nginx-chiral.conf.example  setup.sh
deploy/pudge/: advchain.mjs  advchain_pinned.mjs  burn_unlock.mjs  burn_unlock_authenticated.mjs  burn_unlock_neg.mjs  close-leapout-fresh.mjs  deploy-leapout-finalize.mjs  deploy-unified-genesis-tx3.mjs  deploy-unified-transition.mjs  escrow.mjs  lca.mjs  lca_advance.mjs  leapout-absorb.mjs  p1b_hex.json  p1f_hex.json  p1t_hex.json  stage-transition.mjs  txset.mjs  txset_witness.mjs
deployed/preview/: seal-instance.json
deployed/pudge/: bound-cell-instance.json  unified-instance.json
docs/: BINDING_SPEC.md  DESIGN.md  FAQ.md  TRY_IT.md
primitives/: README.md
primitives/cardano/: mpf-proof.mjs  replay_smt_tests.ak
primitives/ckb/: mldsa.rs  smt_replay.rs
relayer/: cardano_keygen.mjs  gen_cert_witness.py  keygen.mjs  package.json  produce_witness.py  reg_null_burn.py  relay.py  service.py  test_service.py  transcode.py  validate_transcode.py
relayer/onchain/: _restore_code_cell.mjs  _rt.mjs  _signer.mjs  advance.json  advance_1324.mjs  advance_1325.mjs  advance_1326.mjs  advance_1332.json  advance_1332.mjs  advance_epoch.mjs  bg_ctwit.json  bg_demo_lock.mjs  bg_receipt.json  bg_refresh.mjs  bg_reg_wit.json  bg_release.json  bg_release.mjs  bg_release_wit.json  bg_verify.mjs  boundasset.mjs  boundasset_state.json  boundasset_v2.mjs  boundasset_v2_state.json  bridge_deploy_lock.mjs  bridge_lock_live.json  bridge_lock_unified.mjs  burn_gated_live.json  chain_state.json  check_funds.mjs  checkpoint.json  checkpoint_v2.json  cv_deploy_advance.mjs  cv_deploy_boundasset.mjs  cv_deploy_deploy.mjs  cv_pin_compute.mjs  cv_pin_state.json  demo_server.mjs  demo_ui.html  (+66 more)
spike/: README.md
spike/burn-gated-unlock/: Cargo.toml  ba_build.sh  bg_build.sh
spike/burn-gated-unlock/conway-mint/: Cargo.toml
spike/burn-gated-unlock/conway-mint/src/: main.rs
spike/burn-gated-unlock/integration/: Cargo.toml
spike/burn-gated-unlock/integration/tests/: v2.rs  xada.rs  xada_burn.rs
spike/burn-gated-unlock/src/: main.rs
spike/cardano-to-ckb-zk/mithril_verify/: Cargo.toml  cert.example.json  difftest_results.txt  proof.example.json  signed_message.py  tx_cert_constants.json
spike/cardano-to-ckb-zk/mithril_verify/src/: main.rs
spike/cardano-to-ckb-zk/sp1/m2all/groth16-ckbvm/: .gitignore  Cargo.toml
spike/cardano-to-ckb-zk/sp1/m2all/groth16-ckbvm/.cargo/: config.toml
spike/cardano-to-ckb-zk/sp1/m2all/groth16-ckbvm/src/: atomics.rs  main.rs
spike/cardano-to-ckb-zk/sp1/m2all/script/: Cargo.toml
spike/cardano-to-ckb-zk/sp1/m2all/script/src/: main.rs
spike/cardano-to-ckb-zk/sp1/m2bls/program/: Cargo.toml
spike/cardano-to-ckb-zk/sp1/m2bls/program/src/: main.rs
spike/cardano-to-ckb-zk/sp1/m2bls/script/: Cargo.toml  build.rs
spike/cardano-to-ckb-zk/sp1/m2bls/script/src/: main.rs
spike/cardano-to-ckb-zk/sp1/m2full/program/: Cargo.toml
spike/cardano-to-ckb-zk/sp1/m2full/program/src/: main.rs
spike/ckb-to-cardano/circuit/prover/: Cargo.toml  RESULTS.txt  advance_fixture.json  batch_fixture.json  ceremony.example.json  hdrs8.json  leap_fixture.json  leap_proof.bind.json  leap_proof.coherent.json  relayer_redeemer.example.json  run_advance_ceremony.sh
spike/ckb-to-cardano/circuit/prover/src/: blake2b_gadget.rs  ckb_mmr.rs  difficulty_gadget.rs  eag_const.rs  eaglesong_gadget.rs  lib.rs  main.rs  merkle_gadget.rs  mmr_gadget.rs  setup_mpc.rs
spike/ckb-to-cardano/prover/: Cargo.toml  fixture.json
spike/ckb-to-cardano/prover/src/: main.rs
spike/dex-integration/guard/core/: Cargo.toml
spike/dex-integration/guard/core/src/: lib.rs
spike/dex-integration/guard/integration/: Cargo.toml  build.rs  replay_live_leap.py
spike/dex-integration/guard/integration/tests/: guard.rs
spike/dex-integration/relayer/validation/v2vmtest/: Cargo.toml
spike/dex-integration/relayer/validation/v2vmtest/tests/: bridge_lock.rs  genesis_real.rs  mmr_diag.rs  registry_smt.rs  v2_finalize.rs  v2_guards.rs  v2_hardening.rs  v2_leap.rs
spike/dex-integration/relayer/validation/verifier/: Cargo.toml
spike/dex-integration/relayer/validation/vmtest/: Cargo.toml
spike/dex-integration/relayer/validation/vmtest/tests/: finalize.rs
spike/light-client-cell/cert-verify/: Cargo.toml  cv_build.sh  cv_build_deploy.sh
spike/light-client-cell/cert-verify/adversarial/: RESULTS.txt  advance_check_1324.py  advance_check_1325.py  advance_check_1326.py  build.sh  build_chain.py  build_chain_pinned.py  harness.py  run_buildchain.sh  suite.py  witness.py
spike/light-client-cell/cert-verify/src/: main.rs
spike/pq-fri-ckbvm/: Cargo.toml  build.sh
spike/pq-fri-ckbvm/src/: main.rs
spike/pq-fri-verify/ckbvm/: Cargo.toml
spike/pq-fri-verify/ckbvm/src/: checkpoint_consensus_main.rs  checkpoint_consensus_q_main.rs  checkpoint_main.rs  consensus_main.rs  ext_main.rs  main.rs  quartic_main.rs  quartic_witness_main.rs  quartic_zc_main.rs  stark_main.rs
spike/pq-recursion/ckbvm/: Cargo.toml
spike/pq-recursion/ckbvm/src/: main.rs
spike/sp1-ckb/: Cargo.toml
spike/sp1-ckb/lib/: Cargo.toml
spike/sp1-ckb/lib/src/: lib.rs
spike/sp1-ckb/program/: Cargo.toml
spike/sp1-ckb/program/src/: main.rs
spike/sp1-ckb/script/: Cargo.toml
spike/sp1-verify-cost/ckbvm/: Cargo.toml
spike/sp1-verify-cost/ckbvm/src/: main.rs
(+288 files in other folders)
