[package]
license = "MIT"
name = "groth16-fixture-prover"
version = "0.0.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
ark-serialize = "0.4"
# zkcrypto bls12_381 - to RE-ENCODE points into the CIP-0381 / Plutus compressed format
bls12_381 = "0.8"

[profile.release]
opt-level = 3
