[package]
license = "MIT"
name = "cert-verify"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "cert_verify"
path = "src/main.rs"
[dependencies]
ckb-std = "0.16"
bls12_381 = { version = "0.8", default-features = false, features = ["groups","pairings","alloc","experimental"] }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
sha2 = { version = "0.9", default-features = false }
blake2b-ref = { version = "0.3", default-features = false }
[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[features]
standalone = []
embedtest = []
advance = []
native-simulator = []   # declared so ckb-std's entry! cfg(feature="native-simulator") check is recognized (silences unexpected_cfgs); unused in the on-chain build
