[package]
license = "MIT"
version = "0.1.0"
name = "ckb-chain-script"
edition = "2021"
default-run = "ckb-chain"

[[bin]]
name = "ckb-chain"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
clap = { version = "4.0", features = ["derive", "env"] }
ckb-chain-lib = { path = "../lib" }
primitive-types = { version = "0.12", default-features = false }
p3-poseidon2 = "=0.4.3-succinct"  # instrumented via the workspace [patch]; exposes the perm counter

[build-dependencies]
sp1-build = { version = "6.0.1" }
