[package]
license = "MIT"
name = "g16-ckbvm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "g16_ckbvm"
path = "src/main.rs"

[dependencies]
ckb-std = "0.16"
bn = { package = "substrate-bn-succinct-rs", version = "=0.6.0", default-features = false }
sha2 = { version = "0.10", default-features = false }

[profile.release]
opt-level = 3
lto = false
panic = "abort"
codegen-units = 1
overflow-checks = false
