[package]
license = "MIT"
name = "m2bls-program"
version = "0.1.0"
edition = "2021"
[dependencies]
sp1-zkvm = "6.2.3"
bls12_381 = { version = "0.8", default-features = false, features = ["groups", "pairings", "alloc"] }
[workspace]
[patch.crates-io]
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-6.2.0" }
